# ai-scrum-master

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_IMPROVEMENTS.md  CONTRIBUTING.md  LICENSE  PYDANTIC_UPDATES.md  README.md  README_UV.md  pyproject.toml  requirements.txt
docs/: agent_base_architecture.md  architecture.md  issue_generation_implementation.md  prompting_strategies.md  summary.md  task_creation_architecture.md
examples/: process_tdd.py  test_pydantic_api.py
src/: __init__.py
src/agents/: __init__.py  dependency_resolver.py  document_parser.py  issue_generation_agent.py  issue_mapper.py  priority_analyzer.py  task_extractor.py
src/config/: settings.py
src/core/: base_agent.py  exceptions.py
src/integrations/: __init__.py  github_client.py  github_issue_creator.py  llm_client.py  llm_prompt_builder.py
src/models/: documents.py  issues.py  tasks.py
tests/: test_dependency_resolver.py  test_document_parser.py  test_github_client.py  test_github_issue_creator.py  test_issue_mapper.py  test_llm_client.py  test_llm_prompt_builder.py  test_llm_pydantic.py  test_priority_analyzer.py  test_pydantic_models.py  test_task_extractor.py
